--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<div id="App"></div>
-	<script type="text/javascript" src="dist/modules.js"></script></body>
+	<script type="text/javascript" src="modules.js"></script></body>
 </body>
 
 </html>
